# ros2dreame

./: .gitignore  Cargo.toml  README.md
cam-helper/: Makefile  ir_process.h  jpeg_gray.h  ros2cam_shm.h  w10-camd.c
deploy/: direct-mode.sh
docs/: MCU.md
dreame-proto/: Cargo.toml
dreame-proto/src/: lds.rs  lib.rs
host/: .env.example  Dockerfile  Makefile  README.md  dock-sweep.sh  docker-compose.yml  fastdds_no_shm.xml  ros_env.bash
host/explore/: explore.yaml
host/foxglove/: README.md  full.json  ros2dreame.json  slam.json
host/maps/: .gitignore
host/nav2/: hazard_costmap.py  nav2_minimal.launch.py  nav2_params.yaml
host/slam/: dreame_slam.yaml
rviz/: dreame.rviz  slam.rviz
src/: cam.rs  ctrl.rs  direct.rs  main.rs  msg.rs  tap.rs  timesync.rs
w10-mcud/: Cargo.toml
w10-mcud/src/: main.rs
