[package]
name = "w10-mcud"
version = "0.1.0"
edition = "2021"
description = "Standalone Dreame W10 MCU driver (ava replaced): drives /dev/ttyS4 (MotorCtrl 50Hz + heartbeats + ping/pong) with a safety loop, forwards ttyS3 LDS, serves telemetry on 7701/7702 + control on 7705."
license = "MIT"

# Vendored into ros2dreame from VacuumTiger/dreame-w10/mcud (branch
# dreame_w10_control) so ros2dreame is a self-contained repo: the "ava off"
# stack builds entirely from here. Only deps are libc + the vendored proto.

[[bin]]
name = "w10-mcud"
path = "src/main.rs"

[dependencies]
libc = "0.2"
dreame-w10-proto = { path = "../dreame-proto" }
